[gd_scene load_steps=3 format=3 uid="uid://i315fpq72j04"]

[ext_resource type="Script" path="res://gui/options_menu/options_menu.gd" id="1_1sed2"]
[ext_resource type="Texture2D" uid="uid://0htu2grojsmk" path="res://gui/main_menu/main_menu_background.jpg" id="2_aluvo"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1sed2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_aluvo")
expand_mode = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0125
anchor_top = 0.330556
anchor_right = 0.212844
anchor_bottom = 0.647111
offset_right = -0.440033
offset_bottom = 0.0799866
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Video Settings" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_hover_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.784314, 0.588235, 1)
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
action_mode = 0
text = "Video Settings
"
flat = true
alignment = 0

[node name="Audio Settings" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_hover_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.784314, 0.588235, 1)
theme_override_font_sizes/font_size = 32
toggle_mode = true
action_mode = 0
text = "Audio Settings
"
flat = true
alignment = 0

[node name="Control Settings" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_hover_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.784314, 0.588235, 1)
theme_override_font_sizes/font_size = 32
toggle_mode = true
action_mode = 0
text = "Controls"
flat = true
alignment = 0

[node name="Back" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_hover_color = Color(1, 0.784314, 0.588235, 1)
theme_override_colors/font_focus_color = Color(1, 0.784314, 0.588235, 1)
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Main Menu
"
flat = true
alignment = 0

[node name="VideoSettings" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.2125
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Settings Container" type="VBoxContainer" parent="VideoSettings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0222222
anchor_right = 0.984127
anchor_bottom = 0.977778
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ResolutionSetting" type="HBoxContainer" parent="VideoSettings/Settings Container"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VideoSettings/Settings Container/ResolutionSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resolution: "

[node name="ResolutionButton" type="OptionButton" parent="VideoSettings/Settings Container/ResolutionSetting"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
alignment = 2
item_count = 3
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "720x480"
popup/item_2/id = 2

[node name="CheckBox" type="CheckBox" parent="VideoSettings/Settings Container"]
layout_mode = 2
text = "V-Sync"

[connection signal="pressed" from="ButtonContainer/Video Settings" to="." method="_on_video_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/Audio Settings" to="." method="_on_audio_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/Control Settings" to="." method="_on_control_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="VideoSettings/Settings Container/ResolutionSetting/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
